# inter

./: .gitignore  Application.hs  Foundation.hs  Game.hs  Import.hs  Inter.cabal  Main.hs  devel.hs  env.sh
Handler/: Home.hs
config/: keter.yaml  routes  settings.yml  sqlite.yml
elm/: interclient.elm
fay/: Animation.hs  Client.hs  Svg.hs  Three.hs  Webgl.hs
fay-shared/: SharedTypes.hs
interelm/: Interelm.elm  elm_dependencies.json
static/js/: ColladaLoader.js  Three.js
static/js/stue/: Reference.dae  stue.js  stue.mtl
static/model/collada/: sibox.dae
templates/: homepage.hamlet  homepage.julius  homepage.lucius
