name:              Inter
version:           0.0.0
cabal-version:     >= 1.16
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     SharedTypes
                     Handler.Home

    hs-source-dirs:    ., fay-shared
    default-language: Haskell2010
    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    default-extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base
                 , stm
                 , stm-chans
                 , stm-conduit
                 , yesod
                 , yesod-core
                 , yesod-auth
                 , yesod-static
                 , yesod-form
                 , yesod-eventsource
                 , wai-eventsource
                 , yesod-fay
                 , fay
                 , fay-jquery
                 , fay-text
                 , fay-ref
                 , process
                 , blaze-builder
                 , bytestring
                 , base64-bytestring
                 , text
                 , persistent
                 , persistent-sqlite
                 , persistent-template
                 , template-haskell
                 , hamlet
                 , shakespeare
                 , shakespeare-css
                 , shakespeare-js
                 , shakespeare-text
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , yaml
                 , http-conduit
                 , process-conduit
                 , directory
                 , warp
                 , data-default
                 , aeson
                 , conduit
                 , monad-logger
                 , fast-logger
                 , wai-logger

executable         InterGameServer
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    default-language: Haskell2010
    build-depends:     base
                     , Inter
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    default-language: Haskell2011
    ghc-options:       -Wall

    build-depends: base
                 , Inter
                 , yesod-test
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
